# homework_14_web

./: .gitignore
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 87b586bd9261_init.py  88cbaa036897_init.py
src/: main.py  pyproject.toml  schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: auth.py  contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
src/starlette/: testclient.py
src/tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py
